# doc-scanner

./: .dockerignore  Dockerfile  README.md  pyproject.toml
api/: app.py
scripts/: main.py
src/document_scanner/: contours.py  ocr.py  pipelines.py  preprocessing.py  transform.py  utils.py
src/exceptions/: ContourNotFoundError.py
