[project]
name = "doc-scanner"
version = "0.1.0"
description = "Document scanner prototype"
authors = [
    {name = "Samuel Acevedo Bustamante",email = "samuelab2003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "document_scanner", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
